--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
+
+:root {
+    --primary-color: #22254b;
+    --secondary-color: #373b69;
+}
 * {
    
     box-sizing: border-box;
@@ -7,9 +12,6 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    background-color: var(--primary-color);
     margin: 0;
 }
