--- a/style.css
+++ b/style.css
@@ -15,3 +15,14 @@ body {
     background-color: var(--primary-color);
     margin: 0;
 }
+
+header {
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.search {
+    background-color: transparent;
+    border: 2px solid var(--secondary-color);
+}
