--- a/style.css
+++ b/style.css
@@ -20,9 +20,20 @@ header {
     padding: 1rem;
     display: flex;
     justify-content: flex-end;
+    background-color: avr(--secondary-color);
 }
 
 .search {
     background-color: transparent;
-    border: 2px solid var(--secondary-color);
+    border: 2px solid var(--primary-color);
+    border-radius: 50px;
+    font-family: inherit;
+    font-size: 1rem;
+    padding: .5rem 1rem;
+    color: white;
+
+}
+
+.search::placeholder {
+    color: #7378c5;
 }
