--- a/style.css
+++ b/style.css
@@ -37,3 +37,7 @@ header {
 .search::placeholder {
     color: #7378c5;
 }
+.search:focus {
+    outline: none;
+    background-color: var(--primary-color);
+}
