--- a/style.css
+++ b/style.css
@@ -76,5 +76,19 @@ main {
 
 .movie-info span {
     background-color: var(--primary-color);
-    padding: .25rem;
+    padding: .25rem .5rem;
+    border-radius: 3px;
+    font-weight: bold;
+}
+
+.movie-info span.green {
+    color: lightgreen;
+}
+
+.movie-info span.orange {
+    color: orange;
+}
+
+.movie-info span.green {
+    color: red;
 }
