--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ main {
     color: orange;
 }
 
-.movie-info span.green {
+.movie-info span.red {
     color: red;
 }
 
@@ -102,6 +102,7 @@ main {
     right: 0;
     max-height: 100%;
     transform: translateY(101%);
+    transition: all .5s;
 
 }
 .movie:hover .overview {
